--- a/src/assets/styling/main.scss
+++ b/src/assets/styling/main.scss
@@ -1,5 +1,17 @@
 @use "tailwindcss";
 
-@use './_buttons.scss' as *;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Helvetica, Arial, sans-serif;
+  color: #fff;
+}
 
+input {
+  @apply w-full px-4 py-2 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-1 focus:ring-blue-400;
+}
+
+button {
+  @apply px-4 py-2 rounded-lg font-semibold bg-blue-500 text-white shadow hover:bg-blue-600 hover:cursor-pointer transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-400 disabled:opacity-50 disabled:cursor-not-allowed;
+}
 
