--- a/src/assets/styling/main.scss
+++ b/src/assets/styling/main.scss
@@ -5,10 +5,14 @@ body {
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
   color: #fff;
+  min-height: 100vh;
 }
 
 input {
   @apply w-full px-4 py-2 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-1 focus:ring-blue-400;
+}
+input::placeholder {
+  @apply text-gray-400;
 }
 
 button {
