--- a/src/assets/styling/main.scss
+++ b/src/assets/styling/main.scss
@@ -15,7 +15,11 @@ input::placeholder {
   @apply text-gray-400;
 }
 
-button {
-  @apply px-4 py-2 rounded-lg font-semibold bg-blue-500 text-white shadow hover:bg-blue-600 hover:cursor-pointer transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-400 disabled:opacity-50 disabled:cursor-not-allowed;
+button.btn {
+  @apply px-4 py-2 rounded-lg font-semibold bg-gray-700 text-white shadow hover:bg-gray-600 hover:cursor-pointer transition-colors duration-200 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed;
+}
+
+button.btn-primary {
+  @apply px-4 py-2 rounded-lg font-semibold bg-blue-500 text-white shadow hover:bg-blue-600 hover:cursor-pointer transition-colors duration-200 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed;
 }
 
