--- a/src/assets/styling/main.scss
+++ b/src/assets/styling/main.scss
@@ -1,4 +1,4 @@
-@use "tailwindcss";
+@use 'tailwindcss';
 
 body {
   margin: 0;
@@ -22,4 +22,3 @@ button.btn {
 button.btn-primary {
   @apply px-4 py-2 rounded-lg font-semibold bg-blue-500 text-white shadow hover:bg-blue-600 hover:cursor-pointer transition-colors duration-200 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed;
 }
-
